update drawer layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CardView GridLayout</string>
+    <string name="open">Open Drawer Layout</string>
+    <string name="close">Close Drawer Layout</string>
 </resources>
